feat(new feature): j16 - instanceof pattern matching